# wasmscout

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: capabilities.md
examples/: README.md  ci-gate.sh  gen_fixtures.rs
scripts/: smoke.sh
src/: audit.rs  builder.rs  caps.rs  cli.rs  custom.rs  json.rs  lib.rs  main.rs  reader.rs  report.rs  types.rs  wasi.rs  wasm.rs
tests/: cli.rs
